add check for signal registration